[package]
name = "deltaq-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
required-features = ["main"]

[[bin]]
name = "editor-web"
required-features = ["web"]

[features]
default = ["main"]
main = ["actix-web", "include_dir", "parking_lot"]
web = ["yew", "wasm-bindgen", "js-sys"]
include_dir = ["dep:include_dir"]
parking_lot = ["dep:parking_lot"]

[dependencies]
actix-web = { version = "4.9.0", optional = true }
include_dir = { version = "0.7.4", optional = true }
js-sys = { version = "0.3.70", optional = true }
maplit = "1.0.2"
parking_lot = { version = "0.12.3", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen = { version = "0.2.93", optional = true }
yew = { version = "0.21.0", features = ["csr"], optional = true }
